fixed weird overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -549,4 +549,7 @@ svg{
 
 }
 
-
+.hideOverflow{
+  overflow: hidden;
+  
+}
